compiler/tools/fpp-check/test/enum_invalid_symbol.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum_invalid_symbol.fpp: 2.14
constant c = E
             ^
error: invalid symbol E: not a constant symbol
